# AbOSbel

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  build.rs  grub.cfg  install.sh  linker.ld  start.sh  x86_64-abosbel-none.json
.cargo/: config.toml
iso/boot/: ab-os-bel
iso/boot/grub/: grub.cfg
scripts/: start.sh
src/: lib.rs  macros.rs  main.rs  prelude.rs  real_main.rs  serial.rs  tests_lib.rs  utils.rs  vga_buffer.rs
src/bootstrap/: boot.s  multiboot.s
src/kernel/: gdt.rs  interrupts.rs  memory.rs  mod.rs  serial.rs
src/kernel/framebuffer/: macros.rs  mod.rs  screen.rs  text.rs  utils.rs
src/kernel/gdt/: descriptors.rs  mod.rs  utils.rs
src/kernel/io/: mod.rs  ports.rs  serial.rs
src/kernel/memory/: area_frame_allocator.rs  frame_alloc.rs  mod.rs  paging.rs  utils.rs
src/kernel/vga/: colors.rs  macros.rs  mod.rs  utils.rs  writer.rs
src/kernel/vga/io_ports/: mod.rs
src/kernel/x86/: mod.rs  msr.rs  utils.rs
src/preliminary/: boot.s  multiboot.s
src/vga/: colors.rs  constants.rs  macros.rs  mod.rs  utils.rs  writer.rs
src/vga/io_ports/: attribute_controller.rs
tests/: basic_boot.rs  page_fault.rs  should_panic.rs  should_panic_template.rs  stack_overflow.rs  total_allocation.rs
