[package]
name = "ab-os-bel"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.4.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
multiboot2 = { version = "0.19.0", default-features = false, features = ["unstable"] }
spin = "0.9.8"
uart_16550 = "0.3.0"
x86_64 = "0.14.10"

[profile.release] # TODO : remove this one day
debug = true

# No harness tests

[[test]]
name = "should_panic_template"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[[test]]
name = "page_fault"
harness = false
