cargo-features = ["edition2024"]

[package]
name = "ab-os-bel"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.6.0"
const_field_count = "0.1.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
multiboot2 = { version = "0.23.1", default-features = false, features = ["unstable"] }
spin = "0.9.8"
uart_16550 = "0.3.2"

[profile.release] # TODO : remove this one day
debug = true